cdk8s/my-ingress-plus/my-ingress-plus.k8s-changed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ingress-plus-deployment-c8bbb071
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: my-ingress-plus-Deployment-c88b57ca
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: my-ingress-plus-Deployment-c88b57ca
    spec:
      automountServiceAccountToken: false
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   privileged: false
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      # securityContext:
      #   fsGroupChangePolicy: Always
      #   runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: my-ingress-plus-deployment-service-c83d5f65
spec:
  externalIPs: []
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: my-ingress-plus-Deployment-c88b57ca
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-plus-deployment-service-ingress-c8d7115b
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - backend:
              service:
                name: my-ingress-plus-deployment-service-c83d5f65
                port:
                  number: 8080
            path: /
            pathType: Prefix
